# Maman14-roey

./: .~lock.in.as#  CMakeLists.txt  assembler  assembler.c  basicTest.am  basicTest.as  binary.c  binary.h  errors.c  errors.h  first_pass.c  first_pass.h  globals.c  globals.h  helpers.c  helpers.h  in.as  log.txt  makefile  parser.c  parser.h  pre_processor.c  pre_processor.h  table.c  table.h  to do.docx
